--- a/2025-03-31 BLE蓝牙数据协议.md
+++ b/2025-03-31 BLE蓝牙数据协议.md
@@ -4,6 +4,8 @@
 >修改记录2024-08-19-----增加设备状态上报指令06，增加指令发起方向
 >修改记录2024-10-16-----设备状态上报增加气囊充放气指示。
 >修改记录2024-12-17-----增加配置感应带姿态配置指令。
+>修改记录2025-02-12-----增加脊柱微调功能与状态指示。
+>修改记录2025-03-31-----增加脊柱微调功能增加次数时间配置
 > #程序
 
 数据类型定义
@@ -41,10 +43,11 @@ T4          4个字节，时间类型（秒：0-5bit，分：6-11bit，时：12-
 4--手动调整(app->设备) 数据1——对象（U8）（0--头部气囊，1--颈部气囊），数据2--动作(U8)(0--停止，1--升高，2--降低)
 
 5--统计数据上报（设备->app） 数据1-姿态（U8）(1--平躺，2--侧卧) + 数据2开始时间（T4）+数据3结束时间（T4）+ 数据4-姿态（U8）(1--平躺，2--侧卧) + 数据5开始时间（T4）+数据6结束时间（T4）+ ... ,关于该指令的说明，是多个姿态+开始时间和结束时间的条目的组合，根据数据长度计算一条指令中包含多少组数据
-6--设备状态（设备->app），（0：0--空闲，1--平躺，2--侧卧；1：（bit0-1,0--空闲，1--充电中，2--充电完成，bit2--泵1电流异常，bit3--泵2电流异常，bit4--气囊1升高超时，bit5--气囊2升高超时，bit6--气囊1气压超高，bit7--气囊2气压超高）2：头部气囊高度值；3：颈部气囊高度值；4:固件版本； 5是否校准；6~7：电池电压值，8：气囊状态（bit0-1（头部气囊充气状态，0--空闲，1--充气，2--放气），bit3-4(颈部气囊状态 0--空闲，1--充气，2--放气）），APP无需应答
+6--设备状态（设备->app），（0：bit0-1（0--空闲，1--平躺，2--侧卧）,bit2(1--脊柱调整中，0--未进行)；1：（bit0-1,0--空闲，1--充电中，2--充电完成，bit2--泵1电流异常，bit3--泵2电流异常，bit4--气囊1升高超时，bit5--气囊2升高超时，bit6--气囊1气压超高，bit7--气囊2气压超高）2：头部气囊高度值；3：颈部气囊高度值；4:固件版本； 5是否校准；6~7：电池电压值，8：气囊状态（bit0-1（头部气囊充气状态，0--空闲，1--充气，2--放气），bit3-4(颈部气囊状态 0--空闲，1--充气，2--放气）），9：脊柱调整剩余时间（U16），APP无需应答
 
-7、姿态检测配置（APP->设备）数据1--姿态（U8）(0--空闲，1--平躺，2--侧卧)，设备收到指令后会应答。（配置流程，先使用指令1模式配置切换到手动配置模式，当退出指令7检测配置后，发送指令1切换为正常模式，指令1数据2字段为不保存退出）
+7--姿态检测配置（APP->设备）数据1--姿态（U8）(0--空闲，1--平躺，2--侧卧)，设备收到指令后会应答。（配置流程，先使用指令1模式配置切换到手动配置模式，当退出指令7检测配置后，发送指令1切换为正常模式，指令1数据2字段为不保存退出）
 
+8--脊柱调整功能（APP->设备）数据1--动作（U8）(0--停止，1--启动)，参数2 -- 头枕高度（U8）,参数3--颈部起始高度（U8）,参数4--颈部下调高度（U8），参数5高度1保持时间秒(U16)，参数6高度2保持时间秒（U16），参数7调整圈数（U8）
 
 88-设备校准重置(app->设备)，数据1(u16)(0xAA55) +数据2（U16）(0X07E8)
 77-设备重启（app->设备）			//无应答
